--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,6 +8,7 @@
 @source "../../node_modules/flowbite";
 
 @plugin "flowbite/plugin";
+@custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
     --font-sans: "Inter", "ui-sans-serif", "system-ui", "-apple-system",
